2011-08-02  Shinichiro Hamaji  <hamaji@chromium.org>

        Malformed chromium test expectation fix, again. Sorry for the spam...

        * platform/chromium/test_expectations.txt:

2011-08-02  Shinichiro Hamaji  <hamaji@chromium.org>

        Fix malformed chromium test expectation introduced by r92173

        * platform/chromium/test_expectations.txt:

2011-08-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Mac] Unreviewed gardening. Paint the Qt Snow Leopard bot green.

        * platform/qt-mac/Skipped: Skip a failing test.

2011-08-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening.

        * platform/qt/Skipped: Add comment after r92175.

2011-08-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening. Paint the Qt bot green.

        * platform/qt/Skipped: Skip failing tests.

2011-08-02  Shinichiro Hamaji  <hamaji@chromium.org>

        Chromium test_expectations.txt update for r92165

        * platform/chromium/test_expectations.txt:

2011-08-02  Shinichiro Hamaji  <hamaji@chromium.org>

        Layout Test fast/text/international/bidi-mirror-he-ar.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=65524

        Just update test_expectations.txt

        * platform/chromium/test_expectations.txt:

2011-08-02  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening after r92127.

        * platform/qt/editing/selection/4397952-expected.png: Updated.
        * platform/qt/editing/selection/4397952-expected.txt: Updated.

2011-08-01  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: button + "New style rule"
        https://bugs.webkit.org/show_bug.cgi?id=65409

        Reviewed by Yury Semikhatsky.

        * inspector/styles/styles-add-new-rule-expected.txt: Added.
        * inspector/styles/styles-add-new-rule.html: Added.

2011-08-01  Anders Carlsson  <andersca@apple.com>

        Update Lion specific test results.
